--- a/index.html
+++ b/index.html
@@ -6,9 +6,9 @@
 <body>
     <div class="hero-image">
         <div class="hero-text">
-          <h1>I am John Doe</h1>
-          <p>And I'm a Photographer</p>
-          <button>Hire me</button>
+          <h1>My Portfolio</h1>
+          <p>An Open Window To All Of My Projects</p>
+          <button href="">Take a Look</button>
         </div>
       </div>
 </body>
