--- a/index.html
+++ b/index.html
@@ -4,12 +4,18 @@
     <link rel="stylesheet" href="css/main.css">
 </head>
 <body>
-    <div class="hero-image">
-        <div class="hero-text">
-          <h1>My Portfolio</h1>
-          <p>An Open Window To All Of My Projects</p>
-          <button href="">Take a Look</button>
-        </div>
-      </div>
+    
+<div class="bg-image img1"></div>
+<div class="bg-image img2"></div>
+<div class="bg-image img3"></div>
+<div class="bg-image img4"></div>
+<div class="bg-image img5"></div>
+<div class="bg-image img6"></div>
+
+<div class="bg-text">
+    <h1>My Portfolio</h1>
+    <p>An Open Window To All Of My Projects</p>
+    <button href="">Take a Look</button>
+</div>
 </body>
 </html>
