css updates on button

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 <div class="bg-text">
     <h1>My Portfolio</h1>
     <p>An Open Window To All Of My Projects</p>
-    <button class="button" onclick="window.location.href='musicPlayer.html'">Take a Look</button>
+    <a class="button" href="musicPlayer.html">Take a Look</a>
 </div>
 </body>
 </html>
