Added fade to background

--- a/index.html
+++ b/index.html
@@ -4,25 +4,27 @@
         <link rel="stylesheet" href="style.css">
     </head>
     <body>
-        <div class="container">
-
-            <div class="header">
-                <a>Junior Dev.</a>
-                <div class="header-right">
-                    <a>Ansioso Para Trabalhar e Aprender</a>
-                    <br></br>
-                    <a>Evoluir na Vida Profissional</a>
+            <div class="container">
+                <!--<div class="animation">-->
+                    <div class="header">
+                        <a>Junior Dev.</a>
+                        <div class="header-right">
+                            <a>Ansioso Para Trabalhar e Aprender</a>
+                            <br></br>
+                            <a>Evoluir na Vida Profissional</a>
+                        </div>
+                    </div>
                 </div>
+
+                <!--<div class="center">
+                    <h3>Oscar</h3><h2>Joseph</h2>
+                </div>
+
+                <div class="footer">
+                    Link to LinkedIn / GitHub / Contact Me  
+                </div>-->
+
             </div>
-
-            <!--<div class="center">
-                <h3>Oscar</h3><h2>Joseph</h2>
-            </div>
-
-            <div class="footer">
-                Link to LinkedIn / GitHub / Contact Me  
-            </div>-->
-
-        </div>
+        </div>    
     </body>
 </html>
