--- a/index.html
+++ b/index.html
@@ -5,24 +5,24 @@
     </head>
     <body>
             <div class="container">
-                <!--<div class="animation">-->
-                    <div class="header">
-                        <a>Junior Dev.</a>
-                        <div class="header-right">
-                            <a>Ansioso Para Trabalhar e Aprender</a>
-                            <br></br>
-                            <a>Evoluir na Vida Profissional</a>
-                        </div>
+                <div class="header">
+                    <a>Junior Dev.</a>
+                    <div class="header-right">
+                        <a>Ansioso Para Trabalhar</a>
+                        <br></br>
+                        <a>&</a>
+                        <br></br>
+                        <a>Evoluir</a>
                     </div>
                 </div>
 
-                <!--<div class="center">
-                    <h3>Oscar</h3><h2>Joseph</h2>
+                <div class="center">
+                    <a>Oscar </a><a>Joseph</a>
                 </div>
 
                 <div class="footer">
-                    Link to LinkedIn / GitHub / Contact Me  
-                </div>-->
+                    <a>LinkedIn</a><a>GitHub</a><a>Contacte-Me</a>
+                </div>
 
             </div>
         </div>    
