--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
                 </div>
 
                 <div class="footer">
-                    <a>LinkedIn</a><a>GitHub</a><a>Contacte-Me</a>
+                    <a href="https://bit.ly/3CISotA" target="_Blank">LinkedIn</a><a href="https://github.com/OscarJoseph" target="_Blank">GitHub</a><a>Contacte-Me</a>
                 </div>
 
             </div>
