--- a/index.html
+++ b/index.html
@@ -1,7 +1,13 @@
 <!DOCTYPE html>
 <html>
     <head>
+        <title>Oscar Joseph</title>
+        <meta name="author" content="Oscar Joseph">
+        <meta name="description" content="My personal website">
+        <meta name="keywords" content="Junior, Dev, Programmer">
+        <meta http-equiv="refresh" content="15">
         <link rel="stylesheet" href="style.css">
+        <script src="js.js"></script>
     </head>
     <body>
             <div class="container">
@@ -17,7 +23,7 @@
                 </div>
 
                 <div class="center">
-                    <a>Oscar </a><a>Joseph</a>
+                    <a>Oscar </a><a id="glitchText" class="glitch">Joseph</a>
                 </div>
 
                 <div class="footer">
