--- a/index.html
+++ b/index.html
@@ -12,13 +12,13 @@
     <body>
             <div class="container">
                 <div class="header">
-                    <a>Junior Dev.</a>
+                    <a>Junior <a class="glitch2">Dev.</a></a>
                     <div class="header-right">
                         <a>Ansioso Para Trabalhar</a>
                         <br></br>
                         <a>&</a>
                         <br></br>
-                        <a>Evoluir</a>
+                        <a class="glitch2">Evoluir</a>
                     </div>
                 </div>
 
