Phone use possible

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
         <meta name="description" content="My personal website">
         <meta name="keywords" content="Junior, Dev, Programmer">
         <meta http-equiv="refresh" content="15">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="stylesheet" href="style.css">
         <script src="js.js"></script>
     </head>
